--- a/package.json
+++ b/package.json
@@ -14,9 +14,19 @@
     "test": "echo \"Write tests! -> https://gatsby.dev/unit-testing\" && exit 1"
   },
   "dependencies": {
+    "@mdx-js/mdx": "^1.6.22",
+    "@mdx-js/react": "^1.6.22",
+    "babel-plugin-styled-components": "^2.0.2",
     "gatsby": "^4.4.0",
+    "gatsby-plugin-mdx": "^3.4.0",
+    "gatsby-plugin-page-creator": "^4.4.0",
+    "gatsby-plugin-sass": "^5.4.0",
+    "gatsby-plugin-styled-components": "^5.4.0",
+    "gatsby-source-filesystem": "^4.4.0",
     "react": "^17.0.1",
-    "react-dom": "^17.0.1"
+    "react-dom": "^17.0.1",
+    "sass": "^1.45.0",
+    "styled-components": "^5.3.3"
   },
   "devDependencies": {
     "prettier": "^2.4.1"
